--- a/2. Natours Project — Setup and First Steps (Part 1)/Natours/sass/main.scss
+++ b/2. Natours Project — Setup and First Steps (Part 1)/Natours/sass/main.scss
@@ -18,6 +18,7 @@
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/card";
 
 // layout partials
 @import "layout/header";
