--- a/2. Natours Project — Setup and First Steps (Part 1)/Natours/sass/main.scss
+++ b/2. Natours Project — Setup and First Steps (Part 1)/Natours/sass/main.scss
@@ -19,6 +19,8 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
+@import "components/story";
+@import "components/bg-video";
 
 // layout partials
 @import "layout/header";
